Cover and title page ready. Logos added.

--- a/main.tex
+++ b/main.tex
@@ -14,12 +14,12 @@
 \newcommand*{\getFaculty}{Informatics}
 \newcommand*{\getDegree}{Informatics}
 \newcommand*{\getSchool}{Computation, Information and Technology}
-\newcommand*{\getTitle}{Thesis title}
-\newcommand*{\getTitleGer}{Titel der Abschlussarbeit}
-\newcommand*{\getAuthor}{Author}
-\newcommand*{\getDoctype}{Bachelor's Thesis, Master's Thesis, \ldots}
-\newcommand*{\getSupervisor}{Supervisor}
-\newcommand*{\getAdvisor}{Advisor}
+\newcommand*{\getTitle}{Influence of Noise in Quantum Machine Learning}
+\newcommand*{\getTitleGer}{Einfluss von Rauschen in Quantenmaschinen Lernen}
+\newcommand*{\getAuthor}{Erick Ruben Quintanar Salas}
+\newcommand*{\getDoctype}{Master's Thesis}
+\newcommand*{\getSupervisor}{Prof. Dr. Claudia Eckert}
+\newcommand*{\getAdvisor}{M.Sc. Pascal Debus / M.Sc. Kilian Tscharke}
 \newcommand*{\getSubmissionDate}{Submission date}
 \newcommand*{\getSubmissionLocation}{Munich}
 
