--- a/main.tex
+++ b/main.tex
@@ -6,10 +6,8 @@
 %\documentclass[headsepline,footsepline,footinclude=false,fontsize=11pt,paper=a4,listof=totoc,bibliography=totoc,BCOR=12mm,DIV=12]{scrbook} % two-sided
 \documentclass[headsepline,footsepline,footinclude=false,oneside,fontsize=11pt,paper=a4,listof=totoc,bibliography=totoc]{scrbook} % one-sided
 
-% TODO: change citation style in settings
 \input{settings}
 
-% TODO: change thesis information
 \newcommand*{\getUniversity}{Technische Universität München}
 \newcommand*{\getFaculty}{Informatics}
 \newcommand*{\getDegree}{Informatics}
@@ -42,8 +40,8 @@
 
 \mainmatter{}
 
+\input{chapters/00_style}
 \input{chapters/01_introduction}
-% TODO: add more chapters here
 
 \appendix{}
 
