Created outline for the starting part of the thesis with new chapters.

--- a/main.tex
+++ b/main.tex
@@ -40,8 +40,10 @@
 
 \mainmatter{}
 
-\input{chapters/00_style}
 \input{chapters/01_introduction}
+\input{chapters/02_background}
+\input{chapters/03_implementation}
+\input{chapters/00_style}
 
 \appendix{}
 
