Changed bibliography sorting to appearance numbering.

--- a/settings.tex
+++ b/settings.tex
@@ -13,7 +13,8 @@
   minnames=3,
   maxbibnames=99,
   giveninits,
-  uniquename=init]{biblatex}
+  uniquename=init,
+  sorting=none]{biblatex}
 \usepackage{graphicx}
 \usepackage{scrhack} % necessary for listings package
 \usepackage{listings}
