Minor details fixed. Spacing fixed

--- a/main.tex
+++ b/main.tex
@@ -16,8 +16,8 @@
 \newcommand*{\getTitleGer}{Einfluss von Rauschen in Quantenmaschinen Lernen}
 \newcommand*{\getAuthor}{Erick Ruben Quintanar Salas}
 \newcommand*{\getDoctype}{Master's Thesis}
-\newcommand*{\getSupervisor}{Prof. Dr. Claudia Eckert}
-\newcommand*{\getAdvisor}{M.Sc. Pascal Debus / M.Sc. Kilian Tscharke}
+\newcommand*{\getSupervisor}{Prof.\ Dr.\ Claudia Eckert}
+\newcommand*{\getAdvisor}{M. Sc. Pascal Debus / M. Sc. Kilian Tscharke}
 \newcommand*{\getSubmissionDate}{Submission date}
 \newcommand*{\getSubmissionLocation}{Munich}
 
@@ -51,7 +51,7 @@
 
 \addchap{Abbreviations}
 \begin{acronym}
-	\itemsep-.25\baselineskip
+	\itemsep-.25\baselineskip{}
 	\acro{TUM}[TUM]{Technical University of Munich}
 	% TODO: add acronyms
 \end{acronym}
