--- a/settings.tex
+++ b/settings.tex
@@ -37,7 +37,7 @@
 
 % for fachschaft_print.pdf
 \makeatletter
-\if@twoside
+\if@twoside{}
 	\typeout{TUM-Dev LaTeX-Thesis-Template: twoside}
 \else
 	\typeout{TUM-Dev LaTeX-Thesis-Template: oneside}
