--- a/pages/title.tex
+++ b/pages/title.tex
@@ -26,7 +26,7 @@
   \begin{tabular}{l l}
     Author:          & \getAuthor{}         \\
     Supervisor:      & \getSupervisor{}     \\
-    Advisor:         & \getAdvisor{}        \\
+    Advisors:         & \getAdvisor{}        \\
     Submission Date: & \getSubmissionDate{} \\
   \end{tabular}
 
