--- a/main.tex
+++ b/main.tex
@@ -52,7 +52,10 @@
 \addchap{Abbreviations}
 \begin{acronym}
 	\itemsep-.25\baselineskip{}
-	\acro{TUM}[TUM]{Technical University of Munich}
+	\acro{tum}[TUM]{Technical University of Munich}
+	\acro{nisq}[NISQ]{Noisy Intermediate-Scale Quantum}
+	\acro{ml}[ML]{Machine Learning}
+	\acro{qml}[QML]{Quantum Machine Learning}
 	% TODO: add acronyms
 \end{acronym}
 
