Multiple qubits description has been added. Qcircuit package has been loaded and many gate circuits have been drawn.

--- a/settings.tex
+++ b/settings.tex
@@ -28,6 +28,7 @@
 \usepackage[printonlyused]{acronym}
 \usepackage[hidelinks]{hyperref} % hidelinks removes colored boxes around references and links
 \usepackage{physics}
+\usepackage{qcircuit}
 \AtBeginDocument{%
 	\hypersetup{
 		pdftitle=\getTitle,
