Multi-qubit gates have been now added.

--- a/main.tex
+++ b/main.tex
@@ -56,6 +56,7 @@
 	\acro{nisq}[NISQ]{Noisy Intermediate-Scale Quantum}
 	\acro{ml}[ML]{Machine Learning}
 	\acro{qml}[QML]{Quantum Machine Learning}
+	\acro{cnot}[CNOT]{Controlled NOT}
 	% TODO: add acronyms
 \end{acronym}
 
