--- a/bibliography.bib
+++ b/bibliography.bib
@@ -334,3 +334,73 @@ Publisher: Cambridge University Press},
 	date = {1946-10-01},
 	langid = {english},
 }
+
+@article{harris_array_2020,
+	title = {Array programming with {NumPy}},
+	volume = {585},
+	rights = {2020 The Author(s)},
+	issn = {1476-4687},
+	url = {https://www.nature.com/articles/s41586-020-2649-2},
+	doi = {10.1038/s41586-020-2649-2},
+	abstract = {Array programming provides a powerful, compact and expressive syntax for accessing, manipulating and operating on data in vectors, matrices and higher-dimensional arrays. {NumPy} is the primary array programming library for the Python language. It has an essential role in research analysis pipelines in fields as diverse as physics, chemistry, astronomy, geoscience, biology, psychology, materials science, engineering, finance and economics. For example, in astronomy, {NumPy} was an important part of the software stack used in the discovery of gravitational waves1 and in the first imaging of a black hole2. Here we review how a few fundamental array concepts lead to a simple and powerful programming paradigm for organizing, exploring and analysing scientific data. {NumPy} is the foundation upon which the scientific Python ecosystem is constructed. It is so pervasive that several projects, targeting audiences with specialized needs, have developed their own {NumPy}-like interfaces and array objects. Owing to its central position in the ecosystem, {NumPy} increasingly acts as an interoperability layer between such array computation libraries and, together with its application programming interface ({API}), provides a flexible framework to support the next decade of scientific and industrial analysis.},
+	pages = {357--362},
+	number = {7825},
+	journaltitle = {Nature},
+	author = {Harris, Charles R. and Millman, K. Jarrod and van der Walt, Stéfan J. and Gommers, Ralf and Virtanen, Pauli and Cournapeau, David and Wieser, Eric and Taylor, Julian and Berg, Sebastian and Smith, Nathaniel J. and Kern, Robert and Picus, Matti and Hoyer, Stephan and van Kerkwijk, Marten H. and Brett, Matthew and Haldane, Allan and del Río, Jaime Fernández and Wiebe, Mark and Peterson, Pearu and Gérard-Marchant, Pierre and Sheppard, Kevin and Reddy, Tyler and Weckesser, Warren and Abbasi, Hameer and Gohlke, Christoph and Oliphant, Travis E.},
+	urldate = {2024-04-10},
+	date = {2020-09},
+	langid = {english},
+	note = {Publisher: Nature Publishing Group},
+	keywords = {Computational neuroscience, Computational science, Computer science, Software, Solar physics},
+}
+
+@article{bennett_teleporting_1993,
+	title = {Teleporting an Unknown Quantum State via Dual Classical and Einstein-Podolsky-Rosen Channels},
+	volume = {70},
+	rights = {http://link.aps.org/licenses/aps-default-license},
+	issn = {0031-9007},
+	url = {https://link.aps.org/doi/10.1103/PhysRevLett.70.1895},
+	doi = {10.1103/PhysRevLett.70.1895},
+	pages = {1895--1899},
+	number = {13},
+	journaltitle = {Physical Review Letters},
+	shortjournal = {Phys. Rev. Lett.},
+	author = {Bennett, Charles H. and Brassard, Gilles and Crépeau, Claude and Jozsa, Richard and Peres, Asher and Wootters, William K.},
+	urldate = {2024-04-15},
+	date = {1993-03-29},
+	langid = {english},
+}
+
+@article{bennett_communication_1992,
+	title = {Communication via One- and Two-Particle Operators on Einstein-Podolsky-Rosen States},
+	volume = {69},
+	rights = {http://link.aps.org/licenses/aps-default-license},
+	issn = {0031-9007},
+	url = {https://link.aps.org/doi/10.1103/PhysRevLett.69.2881},
+	doi = {10.1103/PhysRevLett.69.2881},
+	pages = {2881--2884},
+	number = {20},
+	journaltitle = {Physical Review Letters},
+	shortjournal = {Phys. Rev. Lett.},
+	author = {Bennett, Charles H. and Wiesner, Stephen J.},
+	urldate = {2024-04-15},
+	date = {1992-11-16},
+	langid = {english},
+}
+
+@article{einstein_can_1935,
+	title = {Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
+	volume = {47},
+	rights = {https://link.aps.org/licenses/aps-default-license},
+	issn = {0031-899X},
+	url = {https://link.aps.org/doi/10.1103/PhysRev.47.777},
+	doi = {10.1103/PhysRev.47.777},
+	pages = {777--780},
+	number = {10},
+	journaltitle = {Physical Review},
+	shortjournal = {Phys. Rev.},
+	author = {Einstein, A. and Podolsky, B. and Rosen, N.},
+	urldate = {2024-04-16},
+	date = {1935-05-15},
+	langid = {english},
+}
