Title has been changed to the official version. The density operator has been introduced.

--- a/main.tex
+++ b/main.tex
@@ -12,8 +12,8 @@
 \newcommand*{\getFaculty}{Informatics}
 \newcommand*{\getDegree}{Informatics}
 \newcommand*{\getSchool}{Computation, Information and Technology}
-\newcommand*{\getTitle}{Influence of Noise in Quantum Machine Learning}
-\newcommand*{\getTitleGer}{Einfluss von Rauschen in Quantenmaschinen Lernen}
+\newcommand*{\getTitle}{Leveraging Noise in Quantum Machine Learning to Improve Model Robustness}
+\newcommand*{\getTitleGer}{Nutzung von Rauschen beim Quantenmaschinellen Lernen zur Verbesserung der Modellrobustheit}
 \newcommand*{\getAuthor}{Erick Ruben Quintanar Salas}
 \newcommand*{\getDoctype}{Master's Thesis}
 \newcommand*{\getSupervisor}{Prof.\ Dr.\ Claudia Eckert}
