Fixed latex warnings in background. Added 1st part of noise results in design. Added color in settings.

--- a/settings.tex
+++ b/settings.tex
@@ -94,6 +94,7 @@
 \definecolor{TUMAccentGreen}{HTML}{A2AD00}
 \definecolor{TUMAccentLightBlue}{HTML}{98C6EA}
 \definecolor{TUMAccentBlue}{HTML}{64A0C8}
+\definecolor{inline_gray}{rgb}{0.9,0.9,0.9}
 
 % Settings for pgfplots
 \pgfplotsset{compat=newest}
