Added sources, dataset section initiated and iris dataset done.

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -810,3 +810,57 @@ Publisher: Cambridge University Press},
 	date = {2014-09-25},
 	langid = {english},
 }
+
+@article{vanschoren_openml_2014,
+	title = {{OpenML}: Networked Science in Machine Learning},
+	volume = {15},
+	issn = {1931-0145, 1931-0153},
+	url = {http://arxiv.org/abs/1407.7722},
+	doi = {10.1145/2641190.2641198},
+	shorttitle = {{OpenML}},
+	abstract = {Many sciences have made signiﬁcant breakthroughs by adopting online tools that help organize, structure and mine information that is too detailed to be printed in journals. In this paper, we introduce {OpenML}, a place for machine learning researchers to share and organize data in ﬁne detail, so that they can work more eﬀectively, be more visible, and collaborate with others to tackle harder problems. We discuss how {OpenML} relates to other examples of networked science and what beneﬁts it brings for machine learning research, individual scientists, as well as students and practitioners.},
+	pages = {49--60},
+	number = {2},
+	journaltitle = {{ACM} {SIGKDD} Explorations Newsletter},
+	shortjournal = {{SIGKDD} Explor. Newsl.},
+	author = {Vanschoren, Joaquin and van Rijn, Jan N. and Bischl, Bernd and Torgo, Luis},
+	urldate = {2024-06-13},
+	date = {2014-06-16},
+	langid = {english},
+	eprinttype = {arxiv},
+	eprint = {1407.7722 [cs]},
+	keywords = {Computer Science - Computers and Society, Computer Science - Machine Learning},
+	file = {1407.pdf:C\:\\Users\\erick\\Zotero\\storage\\ARMXCW3S\\1407.pdf:application/pdf},
+}
+
+@misc{wendlinger_comparative_2024,
+	title = {A Comparative Analysis of Adversarial Robustness for Quantum and Classical Machine Learning Models},
+	url = {http://arxiv.org/abs/2404.16154},
+	abstract = {Quantum machine learning ({QML}) continues to be an area of tremendous interest from research and industry. While {QML} models have been shown to be vulnerable to adversarial attacks much in the same manner as classical machine learning models, it is still largely unknown how to compare adversarial attacks on quantum versus classical models. In this paper, we show how to systematically investigate the similarities and differences in adversarial robustness of classical and quantum models using transfer attacks, perturbation patterns and Lipschitz bounds. More specifically, we focus on classification tasks on a handcrafted dataset that allows quantitative analysis for feature attribution. This enables us to get insight, both theoretically and experimentally, on the robustness of classification networks. We start by comparing typical {QML} model architectures such as amplitude and re-upload encoding circuits with variational parameters to a classical {ConvNet} architecture. Next, we introduce a classical approximation of {QML} circuits (originally obtained with Random Fourier Features sampling but adapted in this work to fit a trainable encoding) and evaluate this model, denoted Fourier network, in comparison to other architectures. Our findings show that this Fourier network can be seen as a “middle ground” on the quantum-classical boundary. While adversarial attacks successfully transfer across this boundary in both directions, we also show that regularization helps quantum networks to be more robust, which has direct impact on Lipschitz bounds and transfer attacks.},
+	number = {{arXiv}:2404.16154},
+	publisher = {{arXiv}},
+	author = {Wendlinger, Maximilian and Tscharke, Kilian and Debus, Pascal},
+	urldate = {2024-06-13},
+	date = {2024-04-24},
+	langid = {english},
+	eprinttype = {arxiv},
+	eprint = {2404.16154 [quant-ph]},
+	keywords = {Computer Science - Machine Learning, Computer Science - Cryptography and Security, Quantum Physics},
+	file = {Wendlinger et al. - 2024 - A Comparative Analysis of Adversarial Robustness f.pdf:C\:\\Users\\erick\\Zotero\\storage\\DEQ6TDUM\\Wendlinger et al. - 2024 - A Comparative Analysis of Adversarial Robustness f.pdf:application/pdf},
+}
+
+@article{du_quantum_2021,
+	title = {Quantum noise protects quantum classifiers against adversaries},
+	volume = {3},
+	url = {https://link.aps.org/doi/10.1103/PhysRevResearch.3.023153},
+	doi = {10.1103/PhysRevResearch.3.023153},
+	abstract = {Noise in quantum information processing is often viewed as a disruptive and difficult-to-avoid feature, especially in near-term quantum technologies. However, noise has often played beneficial roles, from enhancing weak signals in stochastic resonance to protecting the privacy of data in differential privacy. It is then natural to ask: Can we harness the power of quantum noise that is beneficial to quantum computing? An important current direction for quantum computing is its application to machine learning, such as classification problems. One outstanding problem in machine learning for classification is its sensitivity to adversarial examples. These are small, undetectable perturbations from the original data where the perturbed data is completely misclassified in otherwise extremely accurate classifiers. They can also be considered as worst-case perturbations by unknown noise sources. We show that by taking advantage of depolarization noise in quantum circuits for classification, a robustness bound against adversaries can be derived where the robustness improves with increasing noise. This robustness property is intimately connected with an important security concept called differential privacy, which can be extended to quantum differential privacy. For the protection of quantum data, this quantum protocol can be used against the most general adversaries. Furthermore, we show how the robustness in the classical case can be sensitive to the details of the classification model, but in the quantum case the details of the classification model are absent, thus also providing a potential quantum advantage for classical data. This opens the opportunity to explore other ways in which quantum noise can be used in our favor, as well as identifying other ways quantum algorithms can be helpful in a way which is distinct from quantum speedups.},
+	pages = {023153},
+	number = {2},
+	journaltitle = {Physical Review Research},
+	shortjournal = {Phys. Rev. Res.},
+	author = {Du, Yuxuan and Hsieh, Min-Hsiu and Liu, Tongliang and Tao, Dacheng and Liu, Nana},
+	urldate = {2024-06-14},
+	date = {2021-05-27},
+	note = {Publisher: American Physical Society},
+}
