Most of the datasets have been added. Corresponding pictures and references added. Acronyms and packages updated

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -864,3 +864,11 @@ Publisher: Cambridge University Press},
 	date = {2021-05-27},
 	note = {Publisher: American Physical Society},
 }
+
+@article{drummond_c45_nodate,
+	title = {C4.5, Class Imbalance, and Cost Sensitivity: Why Under-Sampling beats Over-Sampling},
+	abstract = {This paper takes a new look at two sampling schemes commonly used to adapt machine learning algorithms to imbalanced classes and misclassiﬁcation costs. It uses a performance analysis technique called cost curves to explore the interaction of over and undersampling with the decision tree learner C4.5. C4.5 was chosen as, when combined with one of the sampling schemes, it is quickly becoming the community standard when evaluating new cost sensitive learning algorithms. This paper shows that using C4.5 with undersampling establishes a reasonable standard for algorithmic comparison. But it is recommended that the cheapest class classiﬁer be part of that standard as it can be better than under-sampling for relatively modest costs. Over-sampling, however, shows little sensitivity, there is often little diﬀerence in performance when misclassiﬁcation costs are changed.},
+	author = {Drummond, Chris and Holte, Robert C},
+	langid = {english},
+	file = {Drummond and Holte - C4.5, Class Imbalance, and Cost Sensitivity Why U.pdf:C\:\\Users\\erick\\Zotero\\storage\\GZHJWQZD\\Drummond and Holte - C4.5, Class Imbalance, and Cost Sensitivity Why U.pdf:application/pdf},
+}
