--- a/main.tex
+++ b/main.tex
@@ -58,6 +58,7 @@
 	\acro{ml}[ML]{Machine Learning}
 	\acro{qml}[QML]{Quantum Machine Learning}
 	\acro{cnot}[CNOT]{Controlled NOT}
+	\acro{pid}[PID]{Pima Indians Diabetes}
 	% TODO: add acronyms
 \end{acronym}
 
