--- a/settings.tex
+++ b/settings.tex
@@ -29,6 +29,7 @@
 \usepackage[hidelinks]{hyperref} % hidelinks removes colored boxes around references and links
 \usepackage{physics}
 \usepackage{qcircuit}
+\usepackage{subcaption}
 \AtBeginDocument{%
 	\hypersetup{
 		pdftitle=\getTitle,
