AML and VQA have been started in the background section.

--- a/main.tex
+++ b/main.tex
@@ -59,6 +59,9 @@
 	\acro{qml}[QML]{Quantum Machine Learning}
 	\acro{cnot}[CNOT]{Controlled NOT}
 	\acro{pid}[PID]{Pima Indians Diabetes}
+	\acro{aml}[AML]{Adversarial Machine Learning}
+	\acro{fgsm}[FGSM]{Fast Gradient Sign Method}
+	\acro{pgd}[PGD]{Projected Gradient Descent}
 	% TODO: add acronyms
 \end{acronym}
 
