--- a/bibliography.bib
+++ b/bibliography.bib
@@ -904,3 +904,72 @@ Publisher: Cambridge University Press},
 	date = {2020-08-06},
 	langid = {english},
 }
+
+@misc{papernot_technical_2018,
+	title = {Technical Report on the {CleverHans} v2.1.0 Adversarial Examples Library},
+	url = {http://arxiv.org/abs/1610.00768},
+	doi = {10.48550/arXiv.1610.00768},
+	abstract = {{CleverHans} is a software library that provides standardized reference implementations of adversarial example construction techniques and adversarial training. The library may be used to develop more robust machine learning models and to provide standardized benchmarks of models' performance in the adversarial setting. Benchmarks constructed without a standardized implementation of adversarial example construction are not comparable to each other, because a good result may indicate a robust model or it may merely indicate a weak implementation of the adversarial example construction procedure. This technical report is structured as follows. Section 1 provides an overview of adversarial examples in machine learning and of the {CleverHans} software. Section 2 presents the core functionalities of the library: namely the attacks based on adversarial examples and defenses to improve the robustness of machine learning models to these attacks. Section 3 describes how to report benchmark results using the library. Section 4 describes the versioning system.},
+	number = {{arXiv}:1610.00768},
+	publisher = {{arXiv}},
+	author = {Papernot, Nicolas and Faghri, Fartash and Carlini, Nicholas and Goodfellow, Ian and Feinman, Reuben and Kurakin, Alexey and Xie, Cihang and Sharma, Yash and Brown, Tom and Roy, Aurko and Matyasko, Alexander and Behzadan, Vahid and Hambardzumyan, Karen and Zhang, Zhishuai and Juang, Yi-Lin and Li, Zhi and Sheatsley, Ryan and Garg, Abhibhav and Uesato, Jonathan and Gierke, Willi and Dong, Yinpeng and Berthelot, David and Hendricks, Paul and Rauber, Jonas and Long, Rujun and {McDaniel}, Patrick},
+	urldate = {2024-07-16},
+	date = {2018-06-27},
+	eprinttype = {arxiv},
+	eprint = {1610.00768 [cs, stat]},
+	keywords = {Computer Science - Machine Learning, Statistics - Machine Learning, Computer Science - Cryptography and Security},
+	file = {arXiv Fulltext PDF:C\:\\Users\\erick\\Zotero\\storage\\GYMVWR4F\\Papernot et al. - 2018 - Technical Report on the CleverHans v2.1.0 Adversar.pdf:application/pdf},
+}
+
+@misc{farhi_classification_2018,
+	title = {Classification with Quantum Neural Networks on Near Term Processors},
+	url = {http://arxiv.org/abs/1802.06002},
+	doi = {10.48550/arXiv.1802.06002},
+	abstract = {We introduce a quantum neural network, {QNN}, that can represent labeled data, classical or quantum, and be trained by supervised learning. The quantum circuit consists of a sequence of parameter dependent unitary transformations which acts on an input quantum state. For binary classification a single Pauli operator is measured on a designated readout qubit. The measured output is the quantum neural network's predictor of the binary label of the input state. First we look at classifying classical data sets which consist of n-bit strings with binary labels. The input quantum state is an n-bit computational basis state corresponding to a sample string. We show how to design a circuit made from two qubit unitaries that can correctly represent the label of any Boolean function of n bits. For certain label functions the circuit is exponentially long. We introduce parameter dependent unitaries that can be adapted by supervised learning of labeled data. We study an example of real world data consisting of downsampled images of handwritten digits each of which has been labeled as one of two distinct digits. We show through classical simulation that parameters can be found that allow the {QNN} to learn to correctly distinguish the two data sets. We then discuss presenting the data as quantum superpositions of computational basis states corresponding to different label values. Here we show through simulation that learning is possible. We consider using our {QNN} to learn the label of a general quantum state. By example we show that this can be done. Our work is exploratory and relies on the classical simulation of small quantum systems. The {QNN} proposed here was designed with near-term quantum processors in mind. Therefore it will be possible to run this {QNN} on a near term gate model quantum computer where its power can be explored beyond what can be explored with simulation.},
+	number = {{arXiv}:1802.06002},
+	publisher = {{arXiv}},
+	author = {Farhi, Edward and Neven, Hartmut},
+	urldate = {2024-07-30},
+	date = {2018-08-30},
+	eprinttype = {arxiv},
+	eprint = {1802.06002 [quant-ph]},
+	keywords = {Quantum Physics},
+	file = {arXiv Fulltext PDF:C\:\\Users\\erick\\Zotero\\storage\\L92J6B7H\\Farhi and Neven - 2018 - Classification with Quantum Neural Networks on Nea.pdf:application/pdf;arXiv.org Snapshot:C\:\\Users\\erick\\Zotero\\storage\\Z5LJB8ZV\\1802.html:text/html},
+}
+
+@misc{eykholt_robust_2018,
+	title = {Robust Physical-World Attacks on Deep Learning Models},
+	url = {http://arxiv.org/abs/1707.08945},
+	abstract = {Recent studies show that the state-of-the-art deep neural networks ({DNNs}) are vulnerable to adversarial examples, resulting from small-magnitude perturbations added to the input. Given that that emerging physical systems are using {DNNs} in safety-critical situations, adversarial examples could mislead these systems and cause dangerous situations. Therefore, understanding adversarial examples in the physical world is an important step towards developing resilient learning algorithms. We propose a general attack algorithm, Robust Physical Perturbations ({RP}2), to generate robust visual adversarial perturbations under different physical conditions. Using the real-world case of road sign classiﬁcation, we show that adversarial examples generated using {RP}2 achieve high targeted misclassiﬁcation rates against standard-architecture road sign classiﬁers in the physical world under various environmental conditions, including viewpoints. Due to the current lack of a standardized testing method, we propose a two-stage evaluation methodology for robust physical adversarial examples consisting of lab and ﬁeld tests. Using this methodology, we evaluate the efﬁcacy of physical adversarial manipulations on real objects. With a perturbation in the form of only black and white stickers, we attack a real stop sign, causing targeted misclassiﬁcation in 100\% of the images obtained in lab settings, and in 84.8\% of the captured video frames obtained on a moving vehicle (ﬁeld test) for the target classiﬁer.},
+	number = {{arXiv}:1707.08945},
+	publisher = {{arXiv}},
+	author = {Eykholt, Kevin and Evtimov, Ivan and Fernandes, Earlence and Li, Bo and Rahmati, Amir and Xiao, Chaowei and Prakash, Atul and Kohno, Tadayoshi and Song, Dawn},
+	urldate = {2024-09-04},
+	date = {2018-04-10},
+	langid = {english},
+	eprinttype = {arxiv},
+	eprint = {1707.08945 [cs]},
+	keywords = {Computer Science - Machine Learning, Computer Science - Cryptography and Security},
+}
+
+@misc{tsipras_robustness_2019,
+	title = {Robustness May Be at Odds with Accuracy},
+	url = {http://arxiv.org/abs/1805.12152},
+	abstract = {We show that there may exist an inherent tension between the goal of adversarial robustness and that of standard generalization. Speciﬁcally, training robust models may not only be more resource-consuming, but also lead to a reduction of standard accuracy. We demonstrate that this trade-off between the standard accuracy of a model and its robustness to adversarial perturbations provably exists in a fairly simple and natural setting. These ﬁndings also corroborate a similar phenomenon observed empirically in more complex settings. Further, we argue that this phenomenon is a consequence of robust classiﬁers learning fundamentally different feature representations than standard classiﬁers. These differences, in particular, seem to result in unexpected beneﬁts: the representations learned by robust models tend to align better with salient data characteristics and human perception.},
+	number = {{arXiv}:1805.12152},
+	publisher = {{arXiv}},
+	author = {Tsipras, Dimitris and Santurkar, Shibani and Engstrom, Logan and Turner, Alexander and Madry, Aleksander},
+	urldate = {2024-09-04},
+	date = {2019-09-09},
+	langid = {english},
+	eprinttype = {arxiv},
+	eprint = {1805.12152 [cs, stat]},
+	keywords = {Computer Science - Machine Learning, Computer Science - Neural and Evolutionary Computing, Statistics - Machine Learning, Computer Science - Computer Vision and Pattern Recognition},
+}
+
+@article{huang_adversarial_nodate,
+	title = {Adversarial machine learning},
+	abstract = {In this paper (expanded from an invited talk at {AISEC} 2010), we discuss an emerging ﬁeld of study: adversarial machine learning—the study of eﬀective machine learning techniques against an adversarial opponent. In this paper, we: give a taxonomy for classifying attacks against online machine learning algorithms; discuss application-speciﬁc factors that limit an adversary’s capabilities; introduce two models for modeling an adversary’s capabilities; explore the limits of an adversary’s knowledge about the algorithm, feature space, training, and input data; explore vulnerabilities in machine learning algorithms; discuss countermeasures against attacks; introduce the evasion challenge; and discuss privacy-preserving learning techniques.},
+	author = {Huang, Ling and Joseph, Anthony D and Nelson, Blaine and Rubinstein, Benjamin I P and Tygar, J D},
+	langid = {english},
+}
