--- a/main.tex
+++ b/main.tex
@@ -44,6 +44,7 @@
 \input{chapters/02_background}
 \input{chapters/03_design}
 \input{chapters/04_implementation}
+\input{chapters/05_results}
 \input{chapters/00_style}
 
 \appendix{}
@@ -59,6 +60,7 @@
 	\acro{qml}[QML]{Quantum Machine Learning}
 	\acro{cnot}[CNOT]{Controlled NOT}
 	\acro{pid}[PID]{Pima Indians Diabetes}
+	\acro{vqa}[VQA]{Variational Quantum Algorithm}
 	\acro{aml}[AML]{Adversarial Machine Learning}
 	\acro{fgsm}[FGSM]{Fast Gradient Sign Method}
 	\acro{pgd}[PGD]{Projected Gradient Descent}
