--- a/settings.tex
+++ b/settings.tex
@@ -95,7 +95,13 @@
 \definecolor{TUMAccentGreen}{HTML}{A2AD00}
 \definecolor{TUMAccentLightBlue}{HTML}{98C6EA}
 \definecolor{TUMAccentBlue}{HTML}{64A0C8}
+
 \definecolor{inline_gray}{rgb}{0.9,0.9,0.9}
+
+\definecolor{codegreen}{rgb}{0,0.6,0}
+\definecolor{codegray}{rgb}{0.5,0.5,0.5}
+\definecolor{codepurple}{rgb}{0.58,0,0.82}
+\definecolor{backcolour}{rgb}{0.95,0.95,0.92}
 
 % Settings for pgfplots
 \pgfplotsset{compat=newest}
@@ -106,7 +112,18 @@
 
 % Settings for lstlistings
 \lstset{%
+  backgroundcolor=\color{backcolour},   
+  commentstyle=\color{codegreen},
+  numberstyle=\tiny\color{codegray},
   basicstyle=\ttfamily,
+  breaklines=true,
+  keepspaces=true,
+  numbers=left,                    
+  numbersep=5pt,
+  showspaces=false,                
+  showstringspaces=false,
+  showtabs=false,                  
+  tabsize=2,
   columns=fullflexible,
   autogobble,
   keywordstyle=\bfseries\color{TUMBlue},
