Pipeline almost finished. Added future work. Updated bibliography and pdf file.

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1024,6 +1024,18 @@ Publisher: Cambridge University Press},
 	langid = {english},
 	eprinttype = {arxiv},
 	eprint = {1811.04968 [physics, physics:quant-ph]},
-	keywords = {Computer Science - Emerging Technologies, Computer Science - Machine Learning, Physics - Computational Physics, Quantum Physics},
+	keywords = {Computer Science - Machine Learning, Quantum Physics, Computer Science - Emerging Technologies, Physics - Computational Physics},
 	file = {1811.pdf:C\:\\Users\\erick\\Zotero\\storage\\V2M5CI6N\\1811.pdf:application/pdf},
+}
+
+@software{falcon_pytorch_2019,
+	title = {{PyTorch} Lightning},
+	rights = {Apache-2.0},
+	url = {https://github.com/wayveai/pytorch-lightning},
+	abstract = {The lightweight {PyTorch} wrapper for high-performance {AI} research. Scale your models, not the boilerplate.},
+	publisher = {Wayve},
+	author = {Falcon, William},
+	urldate = {2024-09-16},
+	date = {2019},
+	note = {original-date: 2021-03-18T18:57:21Z},
 }
