--- a/main.tex
+++ b/main.tex
@@ -45,6 +45,7 @@
 \input{chapters/03_design}
 \input{chapters/04_implementation}
 \input{chapters/05_results}
+\input{chapters/06_future_work}
 \input{chapters/00_style}
 
 \appendix{}
