Evaluation section finished. Give in date modified. Required graphs added.

--- a/main.tex
+++ b/main.tex
@@ -18,7 +18,7 @@
 \newcommand*{\getDoctype}{Master's Thesis}
 \newcommand*{\getSupervisor}{Prof.\ Dr.\ Claudia Eckert}
 \newcommand*{\getAdvisor}{M. Sc. Pascal Debus / M. Sc. Kilian Tscharke}
-\newcommand*{\getSubmissionDate}{Submission date}
+\newcommand*{\getSubmissionDate}{October 31st, 2024}
 \newcommand*{\getSubmissionLocation}{Munich}
 
 \begin{document}
