--- a/main.tex
+++ b/main.tex
@@ -48,7 +48,8 @@
 \input{chapters/06_future_work}
 \input{chapters/00_style}
 
-\appendix{}
+\appendix
+\input{chapters/07_appendix.tex}
 
 \microtypesetup{protrusion=false}
 
