--- a/main.tex
+++ b/main.tex
@@ -45,11 +45,12 @@
 \input{chapters/03_design}
 \input{chapters/04_implementation}
 \input{chapters/05_results}
-\input{chapters/06_future_work}
+\input{chapters/06_summary}
+\input{chapters/07_future_work}
 \input{chapters/00_style}
 
-\appendix
-\input{chapters/07_appendix.tex}
+%\appendix
+%\input{chapters/07_appendix.tex}
 
 \microtypesetup{protrusion=false}
 
