Intro and Backgroun check has been done. Small improvements.

--- a/pages/acknowledgments.tex
+++ b/pages/acknowledgments.tex
@@ -9,6 +9,14 @@
 
 \vspace{10mm}
 
-%TODO: Acknowledgments
+I want to thank first my supervisors Kilian Tscharke and Pascal Debus,
+without their guidance and help this thesis would not have been possible. \
+I also want to thank my friends and family for their unconditional
+love and support. Fatma, María, Rubén, Joanna, Chuy and Oscar, I hope one
+day I will be able to repay you everything you have given me. Additionally,
+I want to thank Nicola Franco and David Winderl for sharing their expertise
+on quantum machine learning. Last but not least, I want to thank Prof. Dr.
+Claudia Eckert for the giving me the opportunity to work on this thesis
+in a very new and exciting field. 
 
 \cleardoublepage{}
