Future work section has been finished.

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1039,3 +1039,57 @@ Publisher: Cambridge University Press},
 	date = {2019},
 	note = {original-date: 2021-03-18T18:57:21Z},
 }
+
+@article{mcclean_barren_2018,
+	title = {Barren plateaus in quantum neural network training landscapes},
+	volume = {9},
+	rights = {2018 The Author(s)},
+	issn = {2041-1723},
+	url = {https://www.nature.com/articles/s41467-018-07090-4},
+	doi = {10.1038/s41467-018-07090-4},
+	abstract = {Many experimental proposals for noisy intermediate scale quantum devices involve training a parameterized quantum circuit with a classical optimization loop. Such hybrid quantum-classical algorithms are popular for applications in quantum simulation, optimization, and machine learning. Due to its simplicity and hardware efficiency, random circuits are often proposed as initial guesses for exploring the space of quantum states. We show that the exponential dimension of Hilbert space and the gradient estimation complexity make this choice unsuitable for hybrid quantum-classical algorithms run on more than a few qubits. Specifically, we show that for a wide class of reasonable parameterized quantum circuits, the probability that the gradient along any reasonable direction is non-zero to some fixed precision is exponentially small as a function of the number of qubits. We argue that this is related to the 2-design characteristic of random circuits, and that solutions to this problem must be studied.},
+	pages = {4812},
+	number = {1},
+	journaltitle = {Nature Communications},
+	shortjournal = {Nat Commun},
+	author = {{McClean}, Jarrod R. and Boixo, Sergio and Smelyanskiy, Vadim N. and Babbush, Ryan and Neven, Hartmut},
+	urldate = {2024-10-20},
+	date = {2018-11-16},
+	langid = {english},
+	note = {Publisher: Nature Publishing Group},
+	keywords = {Quantum information, Quantum mechanics},
+	file = {Full Text PDF:C\:\\Users\\erick\\Zotero\\storage\\99YLSTYC\\McClean et al. - 2018 - Barren plateaus in quantum neural network training.pdf:application/pdf},
+}
+
+@misc{kulshrestha_learning_2023,
+	title = {Learning To Optimize Quantum Neural Network Without Gradients},
+	url = {http://arxiv.org/abs/2304.07442},
+	abstract = {Quantum Machine Learning is an emerging subﬁeld in machine learning where one of the goals is to perform pattern recognition tasks by encoding data into quantum states. This extension from classical to quantum domain has been made possible due to the development of hybrid quantum-classical algorithms that allow a parameterized quantum circuit to be optimized using gradient based algorithms that run on a classical computer. The similarities in training of these hybrid algorithms and classical neural networks has further led to the development of Quantum Neural Networks ({QNNs}). However, in the current training regime for {QNNs}, the gradients w.r.t objective function have to be computed on the quantum device. This computation is highly non-scalable and is affected by hardware and sampling noise present in the current generation of quantum hardware. In this paper, we propose a training algorithm that does not rely on gradient information. Speciﬁcally, we introduce a novel metaoptimization algorithm that trains a meta-optimizer network to output parameters for the quantum circuit such that the objective function is minimized. We empirically and theoretically show that we achieve a better quality minima in fewer circuit evaluations than existing gradient based algorithms on different datasets.},
+	number = {{arXiv}:2304.07442},
+	publisher = {{arXiv}},
+	author = {Kulshrestha, Ankit and Liu, Xiaoyuan and Ushijima-Mwesigwa, Hayato and Safro, Ilya},
+	urldate = {2024-10-20},
+	date = {2023-04-15},
+	langid = {english},
+	eprinttype = {arxiv},
+	eprint = {2304.07442 [quant-ph]},
+	keywords = {Computer Science - Machine Learning, Quantum Physics},
+	file = {Kulshrestha et al. - 2023 - Learning To Optimize Quantum Neural Network Withou.pdf:C\:\\Users\\erick\\Zotero\\storage\\RGU5UHA8\\Kulshrestha et al. - 2023 - Learning To Optimize Quantum Neural Network Withou.pdf:application/pdf},
+}
+
+@misc{aminpour_strategic_2024,
+	title = {Strategic Data Re-Uploads: A Pathway to Improved Quantum Classification Data Re-Uploading Strategies for Improved Quantum Classifier Performance},
+	url = {http://arxiv.org/abs/2405.09377},
+	doi = {10.48550/arXiv.2405.09377},
+	shorttitle = {Strategic Data Re-Uploads},
+	abstract = {Quantum machine learning ({QML}) is a promising field that explores the applications of quantum computing to machine learning tasks. A significant hurdle in the advancement of quantum machine learning lies in the development of efficient and resilient quantum classifiers capable of accurately mapping input data to specific, discrete target outputs. In this paper, we propose a novel approach to improve quantum classifier performance by using a data re-uploading strategy. Re-uploading classical information into quantum states multiple times can enhance the accuracy of quantum classifiers. We investigate the effects of different cost functions, such as fidelity and trace distance, on the optimization process and the classification results. We demonstrate our approach to two classification patterns: a linear classification pattern ({LCP}) and a non-linear classification pattern ({NLCP}). We evaluate the efficacy of our approach by benchmarking it against four distinct optimization techniques: L-{BFGS}-B, {COBYLA}, Nelder-Mead, and {SLSQP}. Additionally, we study the different impacts of fixed datasets and random datasets. Our results show that our approach can achieve high classification accuracy and robustness and outperform the existing quantum classifier models.},
+	number = {{arXiv}:2405.09377},
+	publisher = {{arXiv}},
+	author = {Aminpour, S. and Banad, Y. and Sharif, S.},
+	urldate = {2024-10-20},
+	date = {2024-05-15},
+	eprinttype = {arxiv},
+	eprint = {2405.09377},
+	keywords = {Physics - Data Analysis, Statistics and Probability, Quantum Physics},
+	file = {Preprint PDF:C\:\\Users\\erick\\Zotero\\storage\\6UII8W58\\Aminpour et al. - 2024 - Strategic Data Re-Uploads A Pathway to Improved Q.pdf:application/pdf;Snapshot:C\:\\Users\\erick\\Zotero\\storage\\RCW23XYP\\2405.html:text/html},
+}
