Added some citations. Fixed implemenation details for the plus-minus dataset. Adversarial evaluation for plus-minus has been made, and figures have been added. Future work now suggests using other datasets. Analysis for training noisy and noiseless models has been added.

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1090,6 +1090,13 @@ Publisher: Cambridge University Press},
 	date = {2024-05-15},
 	eprinttype = {arxiv},
 	eprint = {2405.09377},
-	keywords = {Physics - Data Analysis, Statistics and Probability, Quantum Physics},
+	keywords = {Quantum Physics, Physics - Data Analysis, Statistics and Probability},
 	file = {Preprint PDF:C\:\\Users\\erick\\Zotero\\storage\\6UII8W58\\Aminpour et al. - 2024 - Strategic Data Re-Uploads A Pathway to Improved Q.pdf:application/pdf;Snapshot:C\:\\Users\\erick\\Zotero\\storage\\RCW23XYP\\2405.html:text/html},
+}
+
+@article{krizhevsky_learning_nodate,
+	title = {Learning Multiple Layers of Features from Tiny Images},
+	author = {Krizhevsky, Alex},
+	langid = {english},
+	file = {Krizhevsky - Learning Multiple Layers of Features from Tiny Ima.pdf:C\:\\Users\\erick\\Zotero\\storage\\2IAUW5EU\\Krizhevsky - Learning Multiple Layers of Features from Tiny Ima.pdf:application/pdf},
 }
