--- a/main.tex
+++ b/main.tex
@@ -45,7 +45,7 @@
 \input{chapters/03_design}
 \input{chapters/04_implementation}
 \input{chapters/05_results}
-\input{chapters/06_summary}
+\input{chapters/06_conclusion}
 \input{chapters/07_future_work}
 
 %\appendix
