Added last analysis and conclusions.

--- a/settings.tex
+++ b/settings.tex
@@ -30,6 +30,7 @@
 \usepackage{physics}
 \usepackage{qcircuit}
 \usepackage{subcaption}
+\usepackage[shortlabels]{enumitem}
 \AtBeginDocument{%
 	\hypersetup{
 		pdftitle=\getTitle,
